test/org/midica/testfiles/failing/eff-flow-broken-by-function.midica
INCLUDE inc/instruments.midica


0: vol.wait().set(50)
FUNCTION func
END
0: .wait.set(50)

CALL func
